[gd_scene load_steps=8 format=2]

[ext_resource path="res://Scripts/ore_controller.gd" type="Script" id=1]
[ext_resource path="res://Sprites/valuables/gold_ore.png" type="Texture" id=2]
[ext_resource path="res://Audio/player_hitrock.wav" type="AudioStream" id=3]

[sub_resource type="AtlasTexture" id=1]
atlas = ExtResource( 2 )
region = Rect2( 0, 0, 16, 16 )

[sub_resource type="SpriteFrames" id=2]
animations = [ {
"frames": [ SubResource( 1 ) ],
"loop": true,
"name": "default",
"speed": 5.0
} ]

[sub_resource type="Curve" id=3]
_data = [ Vector2( 0.00172712, 0.972727 ), 0.0, 0.0, 0, 0, Vector2( 1, 0 ), -3.00779, 0.0, 0, 0 ]

[sub_resource type="RectangleShape2D" id=4]
extents = Vector2( 8, 8 )

[node name="gold_ore" type="KinematicBody2D"]
collision_layer = 8
collision_mask = 4
script = ExtResource( 1 )

[node name="gfx" type="AnimatedSprite" parent="."]
frames = SubResource( 2 )

[node name="gold_parts" type="CPUParticles2D" parent="."]
emitting = false
amount = 10
lifetime = 0.15
one_shot = true
explosiveness = 1.0
emission_shape = 2
emission_rect_extents = Vector2( 5, 5 )
direction = Vector2( 1, -10 )
spread = 58.71
initial_velocity = 20.0
angular_velocity = 180.0
scale_amount = 2.0
scale_amount_random = 1.0
scale_amount_curve = SubResource( 3 )
color = Color( 0.976471, 0.760784, 0.168627, 1 )

[node name="rock_parts" type="CPUParticles2D" parent="."]
emitting = false
amount = 30
lifetime = 0.15
one_shot = true
explosiveness = 1.0
emission_shape = 2
emission_rect_extents = Vector2( 5, 5 )
direction = Vector2( 1, -10 )
spread = 58.71
initial_velocity = 20.0
angular_velocity = -185.9
scale_amount = 2.0
scale_amount_random = 1.0
scale_amount_curve = SubResource( 3 )
color = Color( 0.243137, 0.207843, 0.27451, 1 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource( 4 )

[node name="CPUParticles2D" type="CPUParticles2D" parent="."]
emission_shape = 2
emission_rect_extents = Vector2( 5, 5 )
direction = Vector2( 0, -1 )
spread = 11.57
gravity = Vector2( 0, 0 )
initial_velocity = 1.0
scale_amount = 0.5

[node name="hurt_sound" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource( 3 )
